// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The save pin action button will render for a description error only 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Invalid description
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for a duplicate found error 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Image URL already exists
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for a failed duplicate error call 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Error processing...
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for a pending duplicate error call 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#aa9c9cd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Processing...
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for a pending preview that is loading 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#aa9c9cd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Image loading...
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for an image and description eror 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Invalid image and description
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for an image error only 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={true}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "#f79f9fd9",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="text"
>
  Invalid image
</ForwardRef(Button)>
`;

exports[`The save pin action button will render for no errors and ready to submit 1`] = `
<ForwardRef(Button)
  aria-label="Pin Image"
  color="success"
  disabled={false}
  onClick={[MockFunction]}
  startIcon={
    <Memo
      sx={
        {
          "fontSize": "1.5em",
          "mr": 1,
        }
      }
    />
  }
  sx={
    {
      "&:disabled": {
        "backgroundColor": "success",
        "color": "white",
      },
      "borderRadius": 0,
      "mt": 1,
    }
  }
  variant="contained"
>
  Save pin
</ForwardRef(Button)>
`;
